local-k8s/manual/databases/01_mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: disecomm-databases
spec:
  serviceName: mongo
  replicas: 1
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
    whenScaled: Retain
  selector:
    matchLabels:
      db: mongo
  template:
    metadata:
      labels:
        db: mongo
    spec:
      serviceAccountName: databases
      containers:
        - name: mongo
          image: mongo:8.0.3
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: init-script
          configMap:
            name: mongo-init
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: disecomm-databases
spec:
  selector:
    db: mongo
  clusterIP: None
  ports:
    - port: 27017
      targetPort: 27017
