local-k8s/manual/databases/01_kafka.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: disecomm-databases
spec:
  serviceName: kafka
  replicas: 1
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
    whenScaled: Retain
  selector:
    matchLabels:
      db: kafka
  template:
    metadata:
      labels:
        db: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:latest
          ports:
            - containerPort: 9092
              name: kafka
            - containerPort: 29092
              name: kafka-plain
          volumeMounts:
            - name: kafka-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: disecomm-databases
spec:
  selector:
    db: kafka
  clusterIP: None
  ports:
    - port: 9092
      targetPort: 9092
      name: kafka
    - port: 29092
      targetPort: 29092
      name: kafka-plain
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: disecomm-databases
spec:
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      name: kafka-ui
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: app
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui-svc
  namespace: disecomm-databases
spec:
  selector:
    app: kafka-ui
  ports:
    - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  namespace: disecomm-databases
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: "kafka-ui.127.0.0.1.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui-svc
                port:
                  number: 8080
